# tetris

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
source/: CMakeLists.txt  main.cpp
source/core/: CMakeLists.txt  aliases.h  app.cpp  app.h  assets.cpp  assets.h  color.h  font.cpp  font.h  glyph.h  input.h  path_resolver.h  provider.cpp  provider.h  renderer.cpp  renderer.h  scene.cpp  scene.h  scene_object.cpp  scene_object.h  sprite.cpp  sprite.h  state.cpp  state.h  texture.cpp  texture.h  ui.cpp  ui.h
source/core/math/: CMakeLists.txt  easing.h  matrix.h  point.cpp  point.h  rect.cpp  rect.h  size.h
source/game/: CMakeLists.txt  board.cpp  board.h  cell.h  constant.h  figure_generator.h  game_app.cpp  game_app.h  game_state.cpp  game_state.h  grid.cpp  grid.h  menu_state.cpp  menu_state.h  pentamino.cpp  pentamino.h  state_id.h
